<resources>
    <string name="app_name">CradleCuddles</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- General Text-->
    <string name="OK">Ok</string>
    <string name="Cancel">Cancel</string>

    <!-- Screen titles-->
    <string name="ChildCare">Child Care</string>
    <string name="MotherCare">Mother Care</string>
    <string name="Extras">Extras</string>
    <string name="Settings">Settings</string>
    <string name="ChildProfile">Child Profile</string>
    <string name="ChildDiet">Child Diet</string>

    <!-- Settings Screen-->
    <string name="ChangeLanguage">Change Language</string>
    <string name="SelectLanguage">Select Language</string>
    <string name="Hindi">Hindi</string>
    <string name="English">English</string>

    <!-- Childcare Fragment-->
    <string name="Vaccination">Vaccination</string>
    <string name="Diet">Diet</string>
    <string name="GrowthEvaluation">Growth evaluation</string>
    <string name="Massage">Massage</string>
    <string name="Cleanliness">Cleanliness</string>
    <string name="CategorisedCare">Categorised care</string>
    <string name="FirstAid">First aid</string>


    <!-- Mothercare Fragment-->
    <string name="Profile">Profile</string>
    <string name="WorkingWomanCare">Working woman care</string>
    <string name="WeightManagement">Weight management</string>
    <string name="MoodObservation">Mood observation</string>
    <string name="KickCount">Kick count</string>
    <string name="PostnatalKit">postnatal kit</string>

    <!-- Vaccination Fragment -->
    <!--<string name="SelectAge">Select child\'s age</string>-->
    <string name="ShowVaccinations">Show vaccinations</string>
    <array name="age">
        <item>Select child\'s age</item>
        <item>Birth</item>
        <item>6 weeks</item>
        <item>10 weeks</item>
        <item>14 weeks</item>
        <item>6 months</item>
        <item>9 months</item>
        <item>9 – 12 months</item>
        <item>12 months</item>
        <item>15 months</item>
        <item>16 to 18 months</item>
        <item>18 months</item>
        <item>2 years</item>
        <item>4 to 6 years</item>
        <item>10 to 12 years</item>
    </array>
    <string name="ContentTag">Content Tag</string>
    <string name="ApproxPrice">Approx Price</string>
    <string name="Doses">Doses</string>
    <string name="MarkDone">Mark it done</string>
    <string name="AddReminder">Add reminder</string>

    <!-- Profile screen -->
    <string name="Name">Name</string>
    <string name="Gender">Gender</string>
    <string name="DateOfBirth">Date of birth</string>
    <string name="TimeOfBirth">Time of birth</string>
    <string name="Weight">Weight</string>
    <string name="Height">Height</string>
    <string name="BloodGroup">Blood Group</string>
    <string name="Gallery">Gallery</string>
    <string name="Camera">Camera</string>
    <string name="RemovePhoto">Remove photo</string>
    <array name="gender">
        <item>Male</item>
        <item>Female</item>
        <item>Other</item>
    </array>

    <!-- Error Messages-->
    <string name="PleaseEnterWeight">Please Enter Weight</string>
    <string name="PleaseEnterHeight">Please Enter Height</string>
    <string name="PleaseEnterBloodGroup">Please Enter Blood Group</string>
    <string name="PleaseEnterName">Please Enter Name</string>
    <string name="PleaseSelectDateofBirth">Please Select Date of Birth</string>
    <string name="PleaseSelectTimeofBirth">Please Select Time of Birth</string>

    <!-- Child diet-->
    <string name="chidDietDesc">This age-by-age short guide will help you in deciding what to feed your baby at what age during the precarious first year. These are only rough guidelines to help you. Do not stress upon feeding your baby only what and how much is mentioned here. Every baby is different and if your baby wants to have something more or less, follow baby\'s lead.</string>
    <array name="ageChildDiet">
        <item>Birth to 4 Months</item>
        <item>4 to 6 Months</item>
        <item>6 to 8 Months</item>
        <item>8 to 10 Months</item>
        <item>10 to 12 Months</item>
    </array>

    <!-- Child Diet Details-->
    <string name="WhattoFeed">What to Feed:</string>
    <string name="HowMuch">How Much:</string>
    <string name="WhatNottoFeed">What Not to Feed:</string>
</resources>
