<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <FrameLayout
            android:id="@+id/rlImageContainar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_image"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_margin="5dp"
                android:src="@mipmap/ic_profile"
                app:civ_border_color="@color/colorAccent"
                app:civ_border_width="1dp" />

            <ImageView
                android:id="@+id/imgProfileEdit"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="bottom|right"
                android:src="@mipmap/ic_edit_image" />
        </FrameLayout>

        <!-- Card Basic Detail-->
        <android.support.v7.widget.CardView
            android:id="@+id/cardBasicDetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rlImageContainar"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="20dp"
            card_view:cardBackgroundColor="@color/colorCardPurple">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/Name"
                        android:textColor="@color/colorText"
                        android:textSize="@dimen/text_12sp" />

                    <TextView
                        android:id="@+id/valName"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_weight="2"
                        android:text=""
                        android:textColor="@color/colorBlack"
                        android:textSize="@dimen/text_12sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/Gender"
                        android:textColor="@color/colorText"
                        android:textSize="@dimen/text_12sp" />

                    <TextView
                        android:id="@+id/valGender"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_weight="2"
                        android:text=""
                        android:textColor="@color/colorBlack"
                        android:textSize="@dimen/text_12sp" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/DateOfBirth"
                        android:textColor="@color/colorText"
                        android:textSize="@dimen/text_12sp" />

                    <TextView
                        android:id="@+id/valDOB"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_weight="2"
                        android:text=""
                        android:textColor="@color/colorBlack"
                        android:textSize="@dimen/text_12sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/TimeOfBirth"
                        android:textColor="@color/colorText"
                        android:textSize="@dimen/text_12sp" />

                    <TextView
                        android:id="@+id/valTimeOfBirth"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_weight="2"
                        android:text=""
                        android:textColor="@color/colorBlack"
                        android:textSize="@dimen/text_12sp" />

                    <ImageView
                        android:id="@+id/imgBasicInfoEdit"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_gravity="bottom|right"
                        android:layout_marginTop="5dp"
                        android:src="@mipmap/ic_edit" />
                </LinearLayout>

            </LinearLayout>
        </android.support.v7.widget.CardView>

        <!-- Card Body Detail-->
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/cardBasicDetails"
            android:layout_margin="@dimen/card_margin"
            card_view:cardBackgroundColor="@color/colorCardPurple">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/Weight"
                        android:textColor="@color/colorText"
                        android:textSize="@dimen/text_12sp" />

                    <TextView
                        android:id="@+id/valWeight"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_weight="2"
                        android:text=""
                        android:textColor="@color/colorBlack"
                        android:textSize="@dimen/text_12sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/Height"
                        android:textColor="@color/colorText"
                        android:textSize="@dimen/text_12sp" />

                    <TextView
                        android:id="@+id/valHeight"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_weight="2"
                        android:text=""
                        android:textColor="@color/colorBlack"
                        android:textSize="@dimen/text_12sp" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/BloodGroup"
                        android:textColor="@color/colorText"
                        android:textSize="@dimen/text_12sp" />

                    <TextView
                        android:id="@+id/valBloodGroup"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_weight="2"
                        android:text=""
                        android:textColor="@color/colorBlack"
                        android:textSize="@dimen/text_12sp" />

                    <ImageView
                        android:id="@+id/imgBodyEdit"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_gravity="bottom|right"
                        android:layout_marginTop="5dp"
                        android:src="@mipmap/ic_edit" />
                </LinearLayout>


            </LinearLayout>
        </android.support.v7.widget.CardView>
    </RelativeLayout>
</ScrollView>